blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>A building or estate that is let or managed. Holds its address, type, size and availability so enquiries and lettings can be matched to space.</description>
    <label>Property</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>