blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Full address including postcode.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>