blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Asking_rent_psf__c.field-meta.xml
<CustomField>
    <fullName>Asking_rent_psf__c</fullName>
    <description>Quoted annual rent per square foot for available space.</description>
    <label>Asking rent (per sq ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>