blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Availability_status__c.field-meta.xml
<CustomField>
    <fullName>Availability_status__c</fullName>
    <description>Whether there is space to let now. Drives the availability view and enquiry matching.</description>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully let</fullName>
            </value>
            <value>
                <fullName>Part available</fullName>
            </value>
            <value>
                <fullName>Fully available</fullName>
            </value>
            <value>
                <fullName>Under offer</fullName>
            </value>
            <value>
                <fullName>Off market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>