blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Available_area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Available_area_sqft__c</fullName>
    <description>Floor area currently available to let. Updated when a lease completes or ends.</description>
    <label>Available area (sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>