blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows which landlord owns each property.</description>
    <label>Landlord</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties owned</relationshipLabel>
    <relationshipName>Properties_owned</relationshipName>
    <type>Lookup</type>
</CustomField>