blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Market_area__c.field-meta.xml
<CustomField>
    <fullName>Market_area__c</fullName>
    <description>Submarket the property sits in. Edit the options to the agent's patch. Used to match requirements.</description>
    <label>Market area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Out of town</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>