blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Property_type__c.field-meta.xml
<CustomField>
    <fullName>Property_type__c</fullName>
    <description>Use class of the building. Used to match enquiries and report availability.</description>
    <label>Property type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Mixed use</fullName>
            </value>
            <value>
                <fullName>Serviced or flexible</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>