blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/fields/Total_area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Total_area_sqft__c</fullName>
    <description>Total lettable floor area of the property.</description>
    <label>Total area (sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>