blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Property__c/listViews/Available_space.listView-meta.xml
<ListView>
    <fullName>Available_space</fullName>
    <columns>NAME</columns>
    <columns>Availability_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Availability_status__c</field>
        <operation>equals</operation>
        <value>Part available,Fully available</value>
    </filters>
    <label>Available space</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>